# truematchAI

./: .gitignore  ACCESS_AND_TESTING_INDEX.md  ADMIN_PANEL_OPTIMIZATION_FINDINGS.md  ADMIN_PANEL_OPTIMIZATION_PROGRESS.md  AGENT_AUTONOMY_STATUS.md  AGENT_CONFIG_ADDITIONAL_FEATURES.md  AGENT_CONFIG_API_GUIDE.md  AGENT_CONFIG_OPS_GUIDE.md  AGENT_CONFIG_SYSTEM.md  AGENT_CONFIG_UI_GUIDE.md  AGENT_OPERATOR_DASHBOARD_DESIGN.md  AGENT_OPERATOR_IMPLEMENTATION_CHECKLIST.md  AI_DRIVEN_TEST_REPORT.md  ATS_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_FEATURES_16_WEEK_ROADMAP.md  AUTONOMOUS_FEATURES_DESIGN.md  AUTONOMOUS_TEST_REPORT.md  AUTONOMY_DELIVERY_INDEX.md  AWS_CLI_SETUP_GUIDE.md  AWS_DEPLOYMENT_CONFIGURATION_PLAN.md  AWS_DEPLOYMENT_READINESS_AUDIT.md  AWS_DEPLOYMENT_REQUIREMENTS.md  AWS_FREE_TIER_OPTIMIZATION.md  AWS_IMPLEMENTATION_CHECKLIST.md  AWS_KUBERNETES_DEPLOYMENT.md  AWS_STAGING_DEPLOYMENT_MINIMAL.md  BACKEND_IMPLEMENTATION_SUMMARY.md  BACKEND_TESTING_GUIDE.md  BACKEND_VALIDATION.sh  CHANGES.md  CLOUD_SETUP_QUICK_START.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_FIX_STRATEGY_TO_100.md  COMPREHENSIVE_PLATFORM_BRIEFING.md  COMPREHENSIVE_PRODUCTION_READINESS_FINAL.md  CREDENTIAL_VERIFICATION_REPORT.md  CRITICAL_PATH_COMPLETE_SUMMARY.md  CRITICAL_PATH_PROGRESS.md  CV_JD_ANALYSIS_IMPLEMENTATION_PHASE_1_2_COMPLETE.md  (+161 more)
backend/: .dockerignore  .env.example  .gitignore  BACKEND_SERVICES_IMPLEMENTATION.md  BEFORE_AFTER_COMPARISON.md  BILLING_GOLIVE.md  COMPLIANCE.md  CRITICAL_E2E_WORKFLOWS_TESTING.md  DATABASE_MIGRATIONS.md  DECISION_ENGINE.md  DELIVERABLES.md  DEPLOY.md  Dockerfile  EMAIL_SERVICE_IMPLEMENTATION.md  EMAIL_SETUP.md  FULL_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  JOB_SCRAPING_FEASIBILITY_ANALYSIS.md  JOB_SCRAPING_IMPLEMENTATION_PLAN.md  JOB_SCRAPING_INTEGRATION_GUIDE.md  JOB_SCRAPING_PHASE1_COMPLETION_SUMMARY.md  JOB_SCRAPING_PHASE1_IMPLEMENTATION.md  MIGRATIONS_CREATED.md  MIGRATION_QUICK_REFERENCE.md  PRODUCTION_HARDENING_SUMMARY.md  README.md  SCHEMA_IMPLEMENTATION_SUMMARY.md  (+20 more)
(+1024 files in other folders)
