[project]
name = "truematch-backend"
version = "0.1.0"
description = "TrueMatch — AI-embodied ATS / hiring-assessment platform backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "celery>=5.4",
    "anthropic>=0.34",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "boto3>=1.34",
    "pypdf>=4.2",
    "python-docx>=1.1",
    # Synchronous Postgres driver used by the Celery worker (psycopg v3).
    "psycopg[binary]>=3.1",
    # HTTP client for the Singpass OIDC token exchange.
    "httpx>=0.27",
    # Field-level PII encryption (AES-256-GCM) + blind indexes.
    "cryptography>=42.0",
    # Observability (optional at runtime; lazily initialised).
    "sentry-sdk[fastapi]>=2.0",
    "prometheus-client>=0.20",
    # Static embeddings for the semantic matcher (Pillar 1) — no torch required.
    "model2vec>=0.3",
    # Billing & payments (Stripe-hosted Checkout + webhooks). Gated on keys.
    "stripe>=9,<13",
    # Email ingestion for autonomous CV/JD submissions via inbox monitoring.
    "aioimap>=0.2.7",
    "aiosmtplib>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    # Spins an ephemeral Postgres for the DB-backed pipeline test (needs Docker).
    "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# conftest sets environment variables before importing the app on purpose.
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
